<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="flarezone_title">FlareZone</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="status_bar_clock_title"></string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="themes_category">Themes</string>
    <string name="build_tweaks_summary_title">Reborn from ashes of Project Blaze</string>
    <string name="listview">ListView</string>
    <string name="general_category">General settings</string>
    <string name="music_category">Music settings</string>
    <string name="development_category">Development settings</string>
    <string name="statusbar_category">Statusbar settings</string>
    <string name="network_category">Network settings</string>
    <string name="ls_category">Lockscreen settings</string>
    <string name="icons_category">Icons settings</string>
    <string name="privacy_category">Privacy indicators</string>
    <string name="volume_category">Volume button</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="qs_category">Quick Settings</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="flarezone_dialog_title">Help us help you!</string>
    <string name="flarezone_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="flarezone_dialog_toast">READ THE WHOLE THING!</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_device_default">Device default</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_brightness_slider_title">Brightness slider style</string>
    <string name="theme_customization_brightness_slider_summary">Set custom brightness slider style</string>
    <string name="theme_customization_data_title">Data icon style</string>
    <string name="theme_customization_data_summary">Set custom data icon style</string>
    <string name="theme_customization_navbar_title">Navbar style</string>
    <string name="theme_customization_navbar_summary">Set custom navigation bar style</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="network_traffic_state_title">Network traffic indicator</string>
    <string name="network_traffic_state_summary">Enable or disable network speed indicator in status bar</string>
    <string name="network_traffic_title">Network traffic indicator</string>
    <string name="network_traffic_master_switch_title">Use Network Traffic Indicator</string>
    <string name="network_options_title">Options</string>
    <string name="network_traffic_autohide_title">Hide network traffic indicator if inactive</string>
    <string name="network_traffic_autohide_summary">Hide when network traffic indicator is below 1 KB/s</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">Allows screenshots and screen recordings for all apps, including those usually blacked out, but may risk privacy. Restart apps to apply changes.</string>
    <string name="back_gesture_haptic_title">Back haptic feedback</string>
    <string name="status_bar_double_tap_to_sleep_title">Tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar or lockscreen to turn off the display</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="roaming_indicator_icon_title">Show roaming indicator icon</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator above signal icon when in roaming mode</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the exclamation mark at the signal bar when data is disabled</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="default_string">Default</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="screen_off_animation_crt" translatable="false">CRT</string>
    <string name="screen_off_animation_scale">Scale</string>
    <string name="category_name_qs_brightness_slider">Brightness slider</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Adjust brightness slider from the Quick Settings</string>
    <string name="qs_brightness_slider_never">Never show</string>
    <string name="qs_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_brightness_slider_always">Show always</string>
    <string name="qs_brightness_slider_position_title">Brightness slider position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="qs_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_title">Clock AM/PM style</string>
    <string name="status_bar_am_pm_unavailable">24-hour clock is enabled</string>
    <string name="status_bar_logo_title">Logo</string>
    <string name="status_bar_logo_summary">Display a custom logo on left or right of the status bar</string>
    <string name="status_bar_logo_position_title">Logo position</string>
    <string name="status_bar_logo_position_right">Right</string>
    <string name="status_bar_logo_position_left">Left</string>
    <string name="status_bar_logo_style_title">Logo style</string>
    <string name="status_bar_logo_style_android">Android(Default)</string>
    <string name="status_bar_logo_style_adidas">Adidas</string>
    <string name="status_bar_logo_style_alien">Alien</string>
    <string name="status_bar_logo_style_apple">Apple</string>
    <string name="status_bar_logo_style_avengers">Avengers</string>
    <string name="status_bar_logo_style_batman">Batman</string>
    <string name="status_bar_logo_style_batman_tdk">Batman The Dark Knight</string>
    <string name="status_bar_logo_style_beats">Beats</string>
    <string name="status_bar_logo_style_biohazard">Biohazard</string>
    <string name="status_bar_logo_style_blackberry">BlackBerry</string>
    <string name="status_bar_logo_style_cannabis">Cannabis</string>
    <string name="status_bar_logo_style_emoticon_cool">Emoticon cool</string>
    <string name="status_bar_logo_style_emoticon_devil">Emoticon devil</string>
    <string name="status_bar_logo_style_flare">Project Flare</string>
    <string name="status_bar_logo_style_heart">Heart</string>
    <string name="status_bar_logo_style_nike">Nike</string>
    <string name="status_bar_logo_style_pacman">Pac-man</string>
    <string name="status_bar_logo_style_puma">Puma</string>
    <string name="status_bar_logo_style_rog">ROG</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="less_boring_heads_up_title">Priority heads up</string>
    <string name="less_boring_heads_up_summary">Show heads up only for calls, messages, alarms, reminders and priority conversations</string>
    <string name="disable_qs_title">Hide QS in secure lockscreen</string>
    <string name="disable_qs_summary">Hides QS if device is locked. Does not disable notification shade</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
    <string name="enable_fingerprint_ripple_effect_title">Ripple effect</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="lockscreen_media">Lockscreen media settings</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
    <string name="fp_success_vibrate_title">Fingerprint authentication vibration</string>
    <string name="fp_success_vibrate_summary">Vibrate when fingerprint authentication is successful</string>
    <string name="fp_error_vibrate_title">Fingerprint error vibration</string>
    <string name="fp_error_vibrate_summary">Vibrate when fingerprint authentication fails</string>
</resources>