<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
        android:title="@string/fingerprint_category">

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="enable_ripple_effect"
            android:title="@string/enable_fingerprint_ripple_effect_title"
            android:summary="@string/enable_fingerprint_ripple_effect_summary"
            android:defaultValue="true" />

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="fp_success_vibrate"
            android:title="@string/fp_success_vibrate_title"
            android:summary="@string/fp_success_vibrate_summary"
            android:defaultValue="true" />

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="fp_error_vibrate"
            android:title="@string/fp_error_vibrate_title"
            android:summary="@string/fp_error_vibrate_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ls_category">

	    <com.flare.zone.preferences.SystemSettingListPreference
            android:key="screen_off_animation"
            android:title="@string/screen_off_animation_title"
            android:entries="@array/screen_off_animation_entries"
            android:entryValues="@array/screen_off_animation_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="secure_lockscreen_qs_disabled"
            android:title="@string/disable_qs_title"
            android:summary="@string/disable_qs_summary"
            android:defaultValue="false" />

        <com.flare.zone.preferences.GlobalSettingSwitchPreference
            android:key="wake_when_plugged_or_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" />
            
    </PreferenceCategory>

    <!-- lockscreen album art customizations -->
    <PreferenceCategory
        android:title="@string/lockscreen_media" >

          <Preference
               android:key="pulse_settings"
               android:fragment="com.flare.zone.fragments.PulseSettings"
               android:title="@string/pulse_settings"
               android:summary="@string/pulse_settings_summary" />

     </PreferenceCategory>

</PreferenceScreen>