<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    

    <Preference
        android:key="status_bar_icon_manager"
        android:title="@string/status_bar_title"
        android:summary="@string/status_bar_system_icons_summary">
        <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" /> 
    </Preference>

    <PreferenceCategory
        android:title="@string/network_category">

        <Preference
            android:key="network_traffic_state"
            android:title="@string/network_traffic_state_title"
            android:summary="@string/network_traffic_state_summary"
            android:fragment="com.flare.zone.fragments.NetworkTrafficSettings"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/icons_category">

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="roaming_indicator_icon"
            android:title="@string/roaming_indicator_icon_title"
            android:summary="@string/roaming_indicator_icon_summary"
            android:defaultValue="true"/>
                
    </PreferenceCategory>

</PreferenceScreen>