<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    
    <PreferenceCategory
        android:title="@string/general_category">

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="advanced_reboot"
            android:title="@string/global_actions_advanced_reboot_title"
            android:summary="@string/global_actions_advanced_reboot_summary"
            android:defaultValue="false" />

        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="back_gesture_haptic"
            android:title="@string/back_gesture_haptic_title"
            android:defaultValue="true" />

        <!-- Double tap to sleep -->
        <com.flare.zone.preferences.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/status_bar_double_tap_to_sleep_title"
            android:summary="@string/status_bar_double_tap_to_sleep_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/development_category">

        <com.flare.zone.preferences.GlobalSettingSwitchPreference
            android:order="92"
            android:key="window_ignore_secure"
            android:title="@string/ignore_window_secure_title"
            android:summary="@string/ignore_window_secure_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>